<resources>
    <string name="app_name">TTS Experiment</string>
    <string name="tts_error">An error occurred initializing the TTS engine.</string>
    <string name="audio_error">This app needs audio to do speech <b>input</b>.</string>
    <string name="text_input">Input text to speak</string>
    <string name="button_speak">Speak</string>
    <string name="button_voice">Voice\ninput</string>
    <string name="text_voice_input">Speak now&#8230;</string>
    <string name="button_settings">Settings</string>
    <string name="text_lang">Language:</string>
    <string name="text_voice">Voice:</string>
    <string name="default_voice">Default voice</string>
    <string name="text_pitch">Pitch:</string>
    <string name="text_speed">Speech rate:</string>
    <string name="voice_input_variants">Print all variants voice input could be interpreted as</string>

    <string-array name="languages">
        <item>English (US)</item>
        <item>English (UK)</item>
        <item>German</item>
        <item>Italian</item>
        <item>French</item>
        <item>Spanish</item>
    </string-array>
</resources>
