<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.woalk.apps.ttsexperiment.MainActivity">

    <LinearLayout
        android:id="@+id/subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="?colorPrimaryDark"
        android:elevation="@dimen/app_bar_elevation"
        android:minHeight="@dimen/sub_bar_height"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/text_lang"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <Spinner
                android:id="@+id/lang_select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_medium"
                android:layout_marginRight="@dimen/default_margin_medium"
                android:layout_weight="1"
                android:entries="@array/languages"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                tools:ignore="UnusedAttribute" />

            <ImageButton
                android:id="@+id/settings_button"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?actionBarItemBackground"
                android:contentDescription="@string/button_settings"
                android:minWidth="0dp"
                android:src="@drawable/ic_settings_white_24px"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />
        </LinearLayout>

        <View
            android:id="@+id/subheader_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_voice_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/sub_bar_height"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/text_voice"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <Spinner
                android:id="@+id/voice_select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_medium"
                android:layout_marginRight="@dimen/default_margin_medium"
                android:layout_weight="1"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pitch_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/sub_bar_height"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/text_pitch"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <SeekBar
                android:id="@+id/pitch_select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_medium"
                android:layout_marginRight="@dimen/default_margin_medium"
                android:layout_weight="1"
                android:max="1999"
                android:progress="999"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <TextView
                android:id="@+id/pitch_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:minWidth="@dimen/number_label_width"
                android:textAlignment="center"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <ImageButton
                android:id="@+id/reset_pitch"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?actionBarItemBackground"
                android:contentDescription="@string/button_settings"
                android:minWidth="0dp"
                android:src="@drawable/ic_undo_white_24px"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_speed_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/sub_bar_height"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/text_speed"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <SeekBar
                android:id="@+id/speed_select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_medium"
                android:layout_marginRight="@dimen/default_margin_medium"
                android:layout_weight="1"
                android:max="1999"
                android:progress="999"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <TextView
                android:id="@+id/speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:minWidth="@dimen/number_label_width"
                android:textAlignment="center"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <ImageButton
                android:id="@+id/reset_speed"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?actionBarItemBackground"
                android:contentDescription="@string/button_settings"
                android:minWidth="0dp"
                android:src="@drawable/ic_undo_white_24px"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/layout_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_layout"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/sub_bar_height">

        <TextView
            android:id="@+id/text_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scrollbars="none" />
    </ScrollView>

    <android.support.v7.widget.CardView
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@android:color/white"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin_medium"
            android:paddingLeft="@dimen/default_margin_medium"
            android:paddingRight="@dimen/default_margin_medium"
            android:paddingTop="@dimen/default_margin_medium">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_input"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_speak"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:enabled="false"
                android:text="@string/button_speak" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0">

                <Button
                    android:id="@+id/button_voice"
                    style="?buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:text="@string/button_voice" />

                <ProgressBar
                    android:id="@+id/wait_voice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/default_margin_medium"
                    android:indeterminate="true"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
